new/new_new/OberonParser.py
# Generated from Oberon.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OberonParser ( Parser ):

    grammarFileName = "Oberon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'.'", "'='", "','", "':'", "'#'", 
                     "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'/'", 
                     "'&'", "'('", "')'", "'~'", "'['", "']'", "'{'", "'}'", 
                     "'..'", "':='", "';'", "'ARRAY'", "'OF'", "'END'", 
                     "'TO'", "'OR'", "'DIV'", "'MOD'", "'NIL'", "'TRUE'", 
                     "'FALSE'", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", "'CASE'", 
                     "'WHILE'", "'DO'", "'FOR'", "'BY'", "'BEGIN'", "'RETURN'", 
                     "'CONST'", "'TYPE'", "'VAR'", "'MODULE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ARRAY", "OF", "END", "TO", "OR", "DIV", 
                      "MOD", "NIL", "TRUE", "FALSE", "IF", "THEN", "ELSIF", 
                      "ELSE", "CASE", "WHILE", "DO", "FOR", "BY", "BEGIN", 
                      "RETURN", "CONST", "TYPE", "VAR", "MODULE", "STRING", 
                      "IDENT", "LETTER", "DIGIT", "COMMENT", "WS" ]

    RULE_ident = 0
    RULE_qualident = 1
    RULE_identdef = 2
    RULE_integer = 3
    RULE_real = 4
    RULE_number = 5
    RULE_constDeclaration = 6
    RULE_constExpression = 7
    RULE_typeDeclaration = 8
    RULE_type_ = 9
    RULE_arrayType = 10
    RULE_length = 11
    RULE_identList = 12
    RULE_variableDeclaration = 13
    RULE_expression = 14
    RULE_relation = 15
    RULE_simpleExpression = 16
    RULE_addOperator = 17
    RULE_term = 18
    RULE_mulOperator = 19
    RULE_factor = 20
    RULE_designator = 21
    RULE_selector = 22
    RULE_set_ = 23
    RULE_element = 24
    RULE_expList = 25
    RULE_actualParameters = 26
    RULE_statement = 27
    RULE_assignment = 28
    RULE_statementSequence = 29
    RULE_ifStatement = 30
    RULE_whileStatement = 31
    RULE_forStatement = 32
    RULE_declarationSequence = 33
    RULE_module = 34

    ruleNames =  [ "ident", "qualident", "identdef", "integer", "real", 
                   "number", "constDeclaration", "constExpression", "typeDeclaration", 
                   "type_", "arrayType", "length", "identList", "variableDeclaration", 
                   "expression", "relation", "simpleExpression", "addOperator", 
                   "term", "mulOperator", "factor", "designator", "selector", 
                   "set_", "element", "expList", "actualParameters", "statement", 
                   "assignment", "statementSequence", "ifStatement", "whileStatement", 
                   "forStatement", "declarationSequence", "module" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    ARRAY=25
    OF=26
    END=27
    TO=28
    OR=29
    DIV=30
    MOD=31
    NIL=32
    TRUE=33
    FALSE=34
    IF=35
    THEN=36
    ELSIF=37
    ELSE=38
    CASE=39
    WHILE=40
    DO=41
    FOR=42
    BY=43
    BEGIN=44
    RETURN=45
    CONST=46
    TYPE=47
    VAR=48
    MODULE=49
    STRING=50
    IDENT=51
    LETTER=52
    DIGIT=53
    COMMENT=54
    WS=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(OberonParser.IDENT, 0)

        def getRuleIndex(self):
            return OberonParser.RULE_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdent" ):
                listener.enterIdent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdent" ):
                listener.exitIdent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdent" ):
                return visitor.visitIdent(self)
            else:
                return visitor.visitChildren(self)




    def ident(self):

        localctx = OberonParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ident)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(OberonParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualidentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(OberonParser.IdentContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_qualident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualident" ):
                listener.enterQualident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualident" ):
                listener.exitQualident(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualident" ):
                return visitor.visitQualident(self)
            else:
                return visitor.visitChildren(self)




    def qualident(self):

        localctx = OberonParser.QualidentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_qualident)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(OberonParser.IdentContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_identdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentdef" ):
                listener.enterIdentdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentdef" ):
                listener.exitIdentdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentdef" ):
                return visitor.visitIdentdef(self)
            else:
                return visitor.visitChildren(self)




    def identdef(self):

        localctx = OberonParser.IdentdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.ident()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 75
                self.match(OberonParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(OberonParser.DIGIT)
            else:
                return self.getToken(OberonParser.DIGIT, i)

        def getRuleIndex(self):
            return OberonParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = OberonParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 78
                self.match(OberonParser.DIGIT)
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==53):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RealContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(OberonParser.DIGIT)
            else:
                return self.getToken(OberonParser.DIGIT, i)

        def getRuleIndex(self):
            return OberonParser.RULE_real

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReal" ):
                listener.enterReal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReal" ):
                listener.exitReal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal" ):
                return visitor.visitReal(self)
            else:
                return visitor.visitChildren(self)




    def real(self):

        localctx = OberonParser.RealContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_real)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 83
                self.match(OberonParser.DIGIT)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==53):
                    break

            self.state = 88
            self.match(OberonParser.T__1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==53:
                self.state = 89
                self.match(OberonParser.DIGIT)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer(self):
            return self.getTypedRuleContext(OberonParser.IntegerContext,0)


        def real(self):
            return self.getTypedRuleContext(OberonParser.RealContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = OberonParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_number)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.integer()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.real()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identdef(self):
            return self.getTypedRuleContext(OberonParser.IdentdefContext,0)


        def constExpression(self):
            return self.getTypedRuleContext(OberonParser.ConstExpressionContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_constDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaration" ):
                listener.enterConstDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaration" ):
                listener.exitConstDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclaration" ):
                return visitor.visitConstDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constDeclaration(self):

        localctx = OberonParser.ConstDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.identdef()
            self.state = 100
            self.match(OberonParser.T__2)
            self.state = 101
            self.constExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(OberonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_constExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstExpression" ):
                listener.enterConstExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstExpression" ):
                listener.exitConstExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstExpression" ):
                return visitor.visitConstExpression(self)
            else:
                return visitor.visitChildren(self)




    def constExpression(self):

        localctx = OberonParser.ConstExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identdef(self):
            return self.getTypedRuleContext(OberonParser.IdentdefContext,0)


        def type_(self):
            return self.getTypedRuleContext(OberonParser.Type_Context,0)


        def getRuleIndex(self):
            return OberonParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = OberonParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.identdef()
            self.state = 106
            self.match(OberonParser.T__2)
            self.state = 107
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualident(self):
            return self.getTypedRuleContext(OberonParser.QualidentContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(OberonParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_" ):
                return visitor.visitType_(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = OberonParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type_)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.qualident()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(OberonParser.ARRAY, 0)

        def length(self):
            return self.getTypedRuleContext(OberonParser.LengthContext,0)


        def OF(self):
            return self.getToken(OberonParser.OF, 0)

        def type_(self):
            return self.getTypedRuleContext(OberonParser.Type_Context,0)


        def getRuleIndex(self):
            return OberonParser.RULE_arrayType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = OberonParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(OberonParser.ARRAY)
            self.state = 114
            self.length()
            self.state = 115
            self.match(OberonParser.OF)
            self.state = 116
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LengthContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constExpression(self):
            return self.getTypedRuleContext(OberonParser.ConstExpressionContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_length

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLength" ):
                listener.enterLength(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLength" ):
                listener.exitLength(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLength" ):
                return visitor.visitLength(self)
            else:
                return visitor.visitChildren(self)




    def length(self):

        localctx = OberonParser.LengthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_length)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.constExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.IdentdefContext)
            else:
                return self.getTypedRuleContext(OberonParser.IdentdefContext,i)


        def getRuleIndex(self):
            return OberonParser.RULE_identList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentList" ):
                listener.enterIdentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentList" ):
                listener.exitIdentList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentList" ):
                return visitor.visitIdentList(self)
            else:
                return visitor.visitChildren(self)




    def identList(self):

        localctx = OberonParser.IdentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_identList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.identdef()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 121
                self.match(OberonParser.T__3)
                self.state = 122
                self.identdef()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identList(self):
            return self.getTypedRuleContext(OberonParser.IdentListContext,0)


        def type_(self):
            return self.getTypedRuleContext(OberonParser.Type_Context,0)


        def getRuleIndex(self):
            return OberonParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = OberonParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.identList()
            self.state = 129
            self.match(OberonParser.T__4)
            self.state = 130
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.SimpleExpressionContext)
            else:
                return self.getTypedRuleContext(OberonParser.SimpleExpressionContext,i)


        def relation(self):
            return self.getTypedRuleContext(OberonParser.RelationContext,0)


        def getRuleIndex(self):
            return OberonParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = OberonParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.simpleExpression()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1992) != 0):
                self.state = 133
                self.relation()
                self.state = 134
                self.simpleExpression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return OberonParser.RULE_relation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation" ):
                listener.enterRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation" ):
                listener.exitRelation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelation" ):
                return visitor.visitRelation(self)
            else:
                return visitor.visitChildren(self)




    def relation(self):

        localctx = OberonParser.RelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_relation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1992) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.TermContext)
            else:
                return self.getTypedRuleContext(OberonParser.TermContext,i)


        def addOperator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OberonParser.AddOperatorContext)
            else:
                return self.getTypedRuleContext(OberonParser.AddOperatorContext,i)


        def getRuleIndex(self):
            return OberonParser.RULE_simpleExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleExpression" ):
                listener.enterSimpleExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleExpression" ):
                listener.exitSimpleExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleExpression" ):
                return visitor.visitSimpleExpression(self)
            else:
                return visitor.visitChildren(self)




    def simpleExpression(self):

        localctx = OberonParser.SimpleExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_simpleExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11 or _la==12:
                self.state = 140
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

